--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "runtime"
 appimage-runtime = { path = "appimage-runtime" }
 appimage-mount = { path = "appimage-mount" }
 exec = "0.3.1"
+glob = "0.3.1"
 
 [dev-dependencies]
 backhand = "0.18.0"
