--- a/appimage-mount/Cargo.toml
+++ b/appimage-mount/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+anyhow = "1.0.86"
 memfd-exec = "0.2.1"
 nix = { version = "0.29.0", features = ["fs", "process"] }
 selecting = "1.2.0"
