--- a/appimage-runtime/BUILD
+++ b/appimage-runtime/BUILD
@@ -13,6 +13,9 @@ rust_library(
         "@crates//:backhand",
         "@crates//:elf",
         "@crates//:glob",
+        "@crates//:seahash",
+        "@crates//:tempfile",
+        "@crates//:base62",
     ],
 )
 
