--- a/appimage-runtime/Cargo.toml
+++ b/appimage-runtime/Cargo.toml
@@ -7,9 +7,12 @@ publish = false
 [dependencies]
 anyhow = "1.0.86"
 backhand = "0.18.0"
+base62 = "2.0.2"
 elf = "0.7.4"
 fork = "0.2.0"
 glob = "0.3.1"
+seahash = "4.1.0"
+tempfile = "3.12.0"
 
 [dev-dependencies]
 runfiles = "0.1.0"
