--- a/appimage-mount/Cargo.toml
+++ b/appimage-mount/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 anyhow = "1.0.86"
 memfd-exec = "0.2.1"
-nix = { version = "0.29.0", features = ["fs", "process"] }
+nix = { version = "0.29.0", features = ["fs"] }
 selecting = "1.2.0"
 tempfile = "3.10.1"
 
