--- a/appimage-runtime/Cargo.toml
+++ b/appimage-runtime/Cargo.toml
@@ -13,6 +13,7 @@ fork = "0.2.0"
 glob = "0.3.1"
 seahash = "4.1.0"
 tempfile = "3.12.0"
+waitpid-any = "0.2.1"
 
 [dev-dependencies]
 runfiles = "0.1.0"
