--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on:
   push:
     branches: [main]
+    tags: ['**']
   pull_request:
   workflow_dispatch:
 jobs:
@@ -13,3 +14,20 @@ jobs:
       with:
         disk-cache: true
     - run: bazel test //...
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: write
+    steps:
+    - uses: actions/checkout@v4
+    - uses: bazel-contrib/setup-bazel@0.8.5
+      with:
+        disk-cache: true
+    - run: bazel build //:runtime
+    - run: cp bazel-bin/runtime appimage-runtime-rs_x86_64-unknown-linux-gnu
+    - uses: softprops/action-gh-release@v2
+      with:
+        files: appimage-runtime-rs_x86_64-unknown-linux-gnu
+        draft: true
