--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: bazel-contrib/setup-bazel@0.8.5
       with:
         disk-cache: true
-    - run: bazel build //:runtime
+    - run: bazel build //:runtimes
     - run: cp bazel-bin/runtime appimage-runtime-rs_x86_64-unknown-linux-gnu
     - uses: softprops/action-gh-release@v2
       with:
